--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
     "babel-eslint": "^7.1.1",
     "eslint": "^3.16.1",
     "react": "15.4.2",
-    "react-native": "0.42.0"
+    "react-native": "0.41.2",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0",
+    "redux-actions": "^1.2.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
     "babel-preset-react-native": "1.9.1",
-    "jest": "19.0.2",
+    "enzyme": "^2.7.1",
+    "jest": "19.0.0",
+    "react": "^15.4.2",
+    "react-addons-test-utils": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-native-mock": "^0.3.1",
     "react-test-renderer": "15.4.2"
   },
   "jest": {
