--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ local.properties
 node_modules/
 npm-debug.log
 yarn-error.log
+#don't save yarn force install instead
+yarn.lock
 
 # BUCK
 buck-out/
