--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "babel-eslint": "^7.1.1",
     "eslint": "^3.16.1",
+    "eslint-plugin-jest": "^19.0.1",
     "react": "15.4.2",
     "react-native": "0.41.2",
     "react-redux": "^5.0.3",
