--- a/package.json
+++ b/package.json
@@ -7,20 +7,22 @@
     "test": "jest"
   },
   "dependencies": {
-    "babel-eslint": "^7.1.1",
-    "eslint": "^3.16.1",
-    "eslint-plugin-jest": "^19.0.1",
     "react": "15.4.2",
     "react-native": "0.41.2",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
   },
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
     "babel-jest": "19.0.0",
     "babel-preset-react-native": "1.9.1",
     "enzyme": "^2.7.1",
+    "eslint": "^3.16.1",
+    "eslint-plugin-jest": "^19.0.1",
+    "eslint-plugin-react": "^6.10.0",
+    "eslint-plugin-react-native": "^2.3.1",
     "jest": "19.0.0",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
